bad/for_class_over_array.example_compiler_output
ERROR
[1mbad/for_class_over_array.lat:5:13: [1;31merror: [0;1marray element type `int` is not convertible to `Y`[m
	for (Y x : new int[3]) {}
	           [1;32m^[m
[1mbad/for_class_over_array.lat:5:7: [1;34mnote: [0;1mrequired by here[m
	for (Y x : new int[3]) {}
	     [1;32m^[m
